Updated footprint info.

--- a/manual.html
+++ b/manual.html
@@ -3498,7 +3498,7 @@ I don't want the code floundering about on the net. </pre>
 <pre>!!!Footprint
 Less than 400 kB with all services installed. The core processor (without the HTTP server and services) is about 2kB (!) on a 32-bit architecture.
 !!!Memory Usage
-Less than 1 MB for this server (live data available shortly).
+About 5 MB for this server, having cashed some content in memory due to disk constraints (live data available shortly).
 !!!Deployment
 The &lt;&lt;tiddler xeno&gt;&gt; ''VM'' consists of one single executable. Extension modules may be added by means of dynamic libraries (platform specific), and eventually the ''boost'' runtime libraries [[may have to be installed|ListOfDistributions]].
 
