--- a/examples/blueprint.html
+++ b/examples/blueprint.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
     <title>Blueprint Viewer</title>
-    <meta http-equiv="cache-control" content="no-cache" />
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <!--link href="../scratch/scratch.css" type="text/css" media="screen" rel="stylesheet" /-->
     <link href="blueprint.css" type="text/css" media="screen" rel="stylesheet"/>
-    <script src="blueprint.js" type="text/javascript">//</script>
+    <script src="blueprint.js" type="text/javascript"></script>
 </head>
 
 <body>
-    <script id="application">
+    <script id="application">//<![CDATA[
         function print() {
             // console.log(arguments)
         }
@@ -21,7 +20,7 @@
             var source = elementWithScriptText.textContent
             print("script: " + source)
             eval(source)
-        }
+        }//]]>
     </script>
     <div id="control-panel">
         <form name="loader" onfocus="var loader = this;" onblur="delete loader;" action="javascript:run(this)">
@@ -35,7 +34,7 @@
             </fieldset>
             <fieldset>
                 <legend>Resource</legend>
-                <input name="location" type="text" value="" maxchars="255"/>
+                <input name="location" type="text" value="" maxlength="255"/>
                 <!-- input name="source" type="file" onload="this.form.location=this.value"/ -->
                 <button type="submit">Load</button>
             </fieldset>
@@ -58,7 +57,7 @@
                 Try it, you'll find out. Nothing will break.
                 </aside>
             </fieldset>
-            <script>
+            <script>//<![CDATA[
                 // In this script, 'this' will be the form when invoked.
                 // To wit move this statement below: alert("invoked by: "+this)
                 this.onsubmit = function () {
@@ -70,20 +69,20 @@
                     this.form.location.value = this.value
                     this.form.location.focus()
                     this.form.submit()
-                }
+                }//]]>
             </script>
         </form>
     </div>
     <div id="workspace">
         <!-- inside of display will be displayed when there is no node selected -->
-        <div id="display" caption="Display">
+        <div id="display" title="Display">
             <div>No Context</div>
         <!-- well, not really...
             <div>No Context</div>
             -->
         </div>
     </div>
-</body>
+    
 <script>
     // Setup initial document
     with (document.forms[0]) {
@@ -93,15 +92,15 @@
     document.getElementById("display").style.height = "33.333%"
 </script>
 
-<script src="/js/d3.min.js">//</script>
-<script src="/js/interact.js">//</script>
+<script src="/js/d3.min.js"></script>
+<script src="/js/interact.js"></script>
 <script type="text/javascript">//<![CDATA[
 
 var xeno = undefined
 
 XENO.load = function(url, frame) {
 
-d3.xml(url, "application/xml", function (xml) {
+  d3.xml(url, "application/xml", function (xml) {
 
     if (!xml) throw "shit, can only understand xml"
 
@@ -199,17 +198,14 @@ d3.xml(url, "application/xml", function (xml) {
     
     xeno = XENO(root, frame)
     xeno.display(root, url)
-})
+  
+  }) // d3.xml(...
 
 } // XENO.load
 
 //]]></script>
 
-
-
-<!-- interact.js test -->
-
-<script>
+<script>//<![CDATA[
 
 function displayDragMoveListener(event) {
     var target = event.target,
@@ -284,54 +280,7 @@ interact('.node').on('hold', function(event) {
     var modify = event.shiftKey;
     node.click(true, modify);
 })
-
-</script>
-
-<!-- RDS test
-
-
-<style type="text/css">
-
-#ghostpane {
-	background: #777;
-	opacity: 0;
-    pointer-events: none;
-
-	position: absolute;
-	width: 50%;
-	height: 50%;
-	top: 25%;
-	left: 25%;
-	margin: 0;
-	padding: 0;
-
-    z-index: 98;
-
-	-webkit-transition: all 0.25s ease-in-out;
-	-moz-transition: all 0.25s ease-in-out;
-	-ms-transition: all 0.25s ease-in-out;
-	-o-transition: all 0.25s ease-in-out;
-	transition: all 0.25s ease-in-out;
-}
-
-#pane {
-    display: none;
-}
-</style>
-
-<div id="pane">
-	<div id="title">Resize, Drag or Snap Me!</div>
-</div>
-
-<script src="../js/RDS.js">//</script>
-
-<script>
-var workspace = document // .getElementById('workspace')
-var ghostpane = document.getElementById('ghostpane')
-RDS(workspace, display, ghostpane)
-</script>
-
--->
+//]]></script>
 
 </body>
 
