Error in selected attribute

--- a/examples/blueprint.html
+++ b/examples/blueprint.html
@@ -29,7 +29,7 @@
                 <legend>Examples</legend>
                 <select name="examples" onchange="this.form.location=this.value; this.form.submit()">
                     <option value="https://raw.githubusercontent.com/huebel/xenomat/master/examples/scratch.xml">Scratchpad</option>
-                    <option value="blueprint.xml" selected>The blueprint of this server</option>
+                    <option value="blueprint.xml" selected="selected">The blueprint of this server</option>
                 </select>
             </fieldset>
             <fieldset>
