Error in selected attribute (encore)

--- a/examples/blueprint.html
+++ b/examples/blueprint.html
@@ -42,7 +42,7 @@
                 <legend>Layout</legend>
                 <select name="layout">
                     <option value="RadialTree">Radial Tree</option>
-                    <option value="RadialCluster" selected>Radial Cluster</option>
+                    <option value="RadialCluster" selected="selected">Radial Cluster</option>
                     <option value="Tree">Tree</option>
                     <option value="Cluster">Cluster</option>
                 </select>
