Use plain blueprint for visualisation.

--- a/examples/blueprint.html
+++ b/examples/blueprint.html
@@ -22,9 +22,9 @@
                 <legend>Examples</legend>
                 <select name="examples" onchange="this.form.location=this.value; this.form.submit()">
                     <option value="https://raw.githubusercontent.com/huebel/xenomat/master/examples/scratch.xml">Scratchpad</option>
-                    <option value="/blueprint/raw/" selected="selected">The blueprint of this server</option>
-                    <option value="/blueprint/raw/hello/world">Hello World</option>
-                    <option value="/blueprint/raw/northwind/products/real">SQL</option>
+                    <option value="/blueprint/plain/" selected="selected">The blueprint of this server</option>
+                    <option value="/blueprint/plain/hello/world">Hello World</option>
+                    <option value="/blueprint/plain/northwind/products/real">SQL</option>
                 </select>
             </fieldset>
             <fieldset>
